# minio_deploy

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
ansible/: inventory.yaml  site.yaml
ansible/roles/base/tasks/: main.yml
ansible/roles/caddy/tasks/: main.yml
ansible/roles/minio/handlers/: main.yml
ansible/roles/minio/tasks/: main.yml
ansible/roles/minio/templates/: minio.caddyfile.j2  minio.env.j2
ansible/roles/minio/vars/: main.yml
ansible/roles/xfs_mounts/defaults/: main.yml
ansible/roles/xfs_mounts/files/: disable_xfs_retry_on_error.sh
ansible/roles/xfs_mounts/handlers/: main.yml
ansible/roles/xfs_mounts/tasks/: main.yml
ansible/roles/xfs_mounts/tests/: test.yml
ansible/roles/xfs_mounts/vars/: main.yml
scripts/: .gitignore  README.md  TESTING.md  architecture.devguide.md  docker-compose.test.yml  lessons-learned.devguide.md  minio-tui.1  minio.devguide.md  minow.1  pyproject.toml  test-integration.sh  testing.devguide.md  textual.devguide.md
scripts/minio_tui/: app.css  app.py  config.py  minio_client.py  run.py  simple_config.py
scripts/tests/: .env  test_app.py  test_app_actions.py  test_config.py  test_config_integration.toml  test_minio_client.py  test_simple_config.py
scripts/tests/integration/: __init__.py  test_minio_integration.py
terraform/: .gitignore  network.tf  provider.tf  resources.tf  servers.tf  terraform.tfvars  variables.tf  volumes.tf
terraform/templates/: inventory.yaml.tpl
